--- a/src/HLA.CSSMS/Client/HLA.CSSMS.Client.csproj
+++ b/src/HLA.CSSMS/Client/HLA.CSSMS.Client.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Shared\HLA.CSSMS.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\icon\" />
+  </ItemGroup>
+
 </Project>
