--- a/src/HLA.CSSMS/Server/appsettings.json
+++ b/src/HLA.CSSMS/Server/appsettings.json
@@ -19,5 +19,6 @@
   "JwtIssuer": "https://localhost",
   "JwtAudience": "localhost",
   "JwtExpiryInDays": 1,
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IMS_Submission_Pdf_Url": "http://10.151.54.12/eAppAdmin/pdf"
 }
